--- a/package.json
+++ b/package.json
@@ -2,17 +2,14 @@
   "name": "json_server",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "api/server.js",
   "scripts": {
-    "start": "node index.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node api/server.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "cors": "^2.8.5",
-    "json-serve": "^0.1.0",
     "json-server": "^0.17.3"
   }
 }
